# Correlator_fitting

./: .gitignore  README.md  bootstrap_fit.py  bs_2_cosh_fit.py  direct_fit.py  fit_result_plot.py  jackknife_fit.py  jk_2_cosh_fit.py  jk_fit.py  jk_fit_cosh.py  pyproject.toml  sample_fit_cosh.py  tmax_scan.py  tmin_scan.py  two_cosh_fit.py  two_state_fit.py  two_state_fit_cosh.py
examples/: 1state_direct.py  jackknife_one_state_fit.py  tmax_scan.py
examples/mom/: ReadMe.md  bs_resample.py  direct_fit.py  effecive_mass.py  fold_average.py  get_correlation_time.py  load_data.py  plot.py  temp.py
legacy/: bs_2_cosh_corr_fit.py  correlated_fit.py  correlated_fit_bs.py  direct_fit.py  direct_fit_exp.py  extraction.py  jackboot.py  load_data.py  main.py  temp.py  test.py  two_state_fit_cosh.py
src/fitting/: JackknifeFitOneState.py  base_fit.py  direct_fit.py  jackknife_fit.py  jackknife_two_state_fit.py  two_state_fit.py
src/fitting/jackknife/one_state/: uncorrelated_fit.py
src/models/: model_functions.py  residuals.py
src/utils/: io.py  stats.py  test.py
